# lan-chat

./: .gitignore  README.md  package-lock.json  package.json  server.js
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  PROTOCOL.md
docs/superpowers/plans/: 2026-06-28-lan-chat-input-bar-embed.md  2026-06-28-lan-chat-terminal-redesign.md  2026-06-29-tauri-desktop-app.md
docs/superpowers/specs/: 2026-06-28-lan-chat-input-bar-embed.md  2026-06-28-lan-chat-terminal-design.md  2026-06-29-lan-chat-ui-bubbles-design.md  2026-06-29-rust-native-ui-design.md  2026-06-29-tauri-desktop-app-design.md
public/: index.html
scripts/: build_font.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/fonts/: SARASA-LICENSE.md
src-tauri/src/: app.rs  commands.rs  lib.rs  main.rs  mdns.rs  messages.rs  network.rs  peers.rs  server.rs  transfer.rs
src-tauri/src/ui/: clip_modal.rs  file_card.rs  mod.rs  setup.rs  theme.rs
